# nono-git-sign

./: .claude-workspace-context.md  .gitignore  Cargo.toml  README.md  install.sh
git-sign-proxy/: Cargo.toml
git-sign-proxy-client/: Cargo.toml
git-sign-proxy-client/src/: main.rs
git-sign-proxy/src/: main.rs  sign.rs  validate.rs
git-sign-proxy/tests/: integration.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
systemd/: git-sign-proxy.service
